# movie-ticket-booking-system-10th-grade-AAVezirova22

./: CMakeLists.txt
assets/: drawAdminMenu.txt  drawMainMenu.txt  drawTeamName.txt  drawUserMenu.txt
businessLogicLayer/: app.cpp  app.h
dataAccessLayer/: dataHandler.cpp  dataHandler.h
include/: app.h  db.h  files.h  login.h  mainMenu.h  register.h  user.h
presentationLayer/: menu.cpp  menu.h
src/: app.cpp  db.cpp  login.cpp  main.cpp  mainMenu.cpp  register.cpp
